--- a/src/elements/gex-layout-manager.html
+++ b/src/elements/gex-layout-manager.html
@@ -79,10 +79,10 @@
 
     <!-- Put all slotted element into an ivisible container to have a clean initial state -->
     <div hidden>
-      <slot id="s0" name="s0" on-slotchange="_slot0Changed"></slot>
-      <slot id="s1" name="s1" on-slotchange="_slot1Changed"></slot>
-      <slot id="s2" name="s2" on-slotchange="_slot2Changed"></slot>
-      <slot id="s3" name="s3" on-slotchange="_slot3Changed"></slot>
+      <slot id="s0" name="s0"></slot>
+      <slot id="s1" name="s1"></slot>
+      <slot id="s2" name="s2"></slot>
+      <slot id="s3" name="s3"></slot>
     </div>
 
     <!-- Layout fullscreen-->
