--- a/src/import-ami.html
+++ b/src/import-ami.html
@@ -1,2 +1,2 @@
 <script src="../bower_components/three.js/build/three.min.js"></script>
-<script src="../bower_components/ami/build/ami.js"></script>
+<script src="../bower_components/ami/lib/ami.min.js"></script>
