--- a/src/elements/ami-renderer.html
+++ b/src/elements/ami-renderer.html
@@ -62,6 +62,8 @@
       patient-name="[[patientName]]"
       patient-age="[[patientAge]]"
       patient-birthdate="[[patientBirthdate]]"
+      size-x="[[sizeX]]"
+      size-y="[[sizeY]]"
       study-date="[[studyDate]]"
       study-description="[[studyDescription]]"
       series-description="[[seriesDescription]]"
@@ -337,7 +339,7 @@
         }
 
         // update localizer scene
-        if (this.localizerHelper) {
+        if (this.localizerHelper && this.localizerHelper.referencePlane) {
           this.localizerHelper.canvasWidth = width;
           this.localizerHelper.canvasHeight = height;
         }
@@ -348,7 +350,7 @@
 
       _onScroll(event) {
         if (event.delta > 0) {
-          if (this.stackHelper.index >= this.stackHelper.orientationMaxIndex - 1) {
+          if (this.stackHelper.index >= this.stackHelper.orientationMaxIndex) {
             return false;
           }
           this.stackHelper.index += 1;
@@ -544,6 +546,12 @@
           //
           this.set('stackMaxIndex', this.stackHelper.orientationMaxIndex);
           this.set('stackIndex', this.stackHelper.index);
+
+          const stackDimensions = this.stackHelper.stack.dimensionsIJK;
+          this.sizeX =
+            stackDimensions.getComponent(this.stackHelper.orientation % 3);
+          this.sizeY =
+            stackDimensions.getComponent((this.stackHelper.orientation + 1) % 3);
         }
       }
 
@@ -570,6 +578,13 @@
             Math.floor(this.stackHelper.orientationMaxIndex/2);
           this.set('stackMaxIndex', this.stackHelper.orientationMaxIndex);
           this.set('stackIndex', this.stackHelper.index);
+
+          // update size in annotations
+          const stackDimensions = this.stackHelper.stack.dimensionsIJK;
+          this.sizeX =
+            stackDimensions.getComponent(this.stackHelper.orientation % 3);
+          this.sizeY =
+            stackDimensions.getComponent((this.stackHelper.orientation + 1) % 3);
 
           this._changed = true;
         }
